<resources>
    <string name="app_name">Inventory App</string>
    <string name="action_settings">Settings</string>
    <string name="no_products_added_to_the_inventory">No products added to the inventory.\nUse the + button to add products.</string>
    <string name="product_name">Product Name</string>
    <string name="qty">QTY</string>
    <string name="price">Price</string>
    <string name="sell">Sell</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="add_new_product">Add New Product</string>
    <string name="enter_product_quantity">Enter product quantity</string>
    <string name="enter_product_price">Enter Product Price</string>
    <string name="enter_product_supplier_name">Enter product supplier name</string>
    <string name="upload_image">Upload Image</string>
    <string name="add">Add</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="details">Details</string>
    <string name="sold_by_jainsaab">Sold By: JainSaab</string>
    <string name="detail_price_text">Price: Rs. 200</string>
    <string name="detail_qty_text">Qty: 100</string>
    <string name="receive">Receive</string>
    <string name="order_more">Order More</string>
    <string name="delete">Delete</string>
</resources>
