<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jainsaab.inventoryapp.AddProductActivity">

    <LinearLayout
        android:id="@+id/activity_add_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/normal_margin"
            android:text="@string/add_new_product"
            android:textSize="@dimen/add_new_product_header" />

        <EditText
            android:id="@+id/product_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin"
            android:hint="@string/enter_product_name"
            android:textSize="@dimen/product_name_size" />

        <EditText
            android:inputType="numberDecimal"
            android:id="@+id/product_qty_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin"
            android:hint="@string/enter_product_quantity"
            android:textSize="@dimen/product_name_size" />

        <EditText
            android:inputType="numberDecimal"
            android:id="@+id/product_price_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin"
            android:hint="@string/enter_product_price"
            android:textSize="@dimen/product_name_size" />

        <EditText
            android:id="@+id/product_supplier_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin"
            android:hint="@string/enter_product_supplier_name"
            android:textSize="@dimen/product_name_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/upload_img_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_image"
                android:textSize="@dimen/qty_price_size" />

            <ImageView
                android:contentDescription="@string/uploaded_image"
                android:id="@+id/uploaded_img"
                android:layout_width="@dimen/uploaded_img_size"
                android:layout_height="@dimen/uploaded_img_size"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:scaleType="fitCenter"
                tools:src="@mipmap/ic_launcher" />

        </LinearLayout>

        <Button
            android:id="@+id/add_btn"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/add"
            android:textSize="@dimen/qty_price_size"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
