<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jainsaab.inventoryapp.DetailsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="@dimen/detail_text_size"
                    tools:text="@string/product_name"
                    android:id="@+id/detail_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="@dimen/product_name_size"
                    android:id="@+id/detail_supplier"
                    android:text="@string/sold_by_jainsaab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <ImageView
                android:scaleType="fitCenter"
                tools:src="@mipmap/ic_launcher"
                android:id="@+id/detail_img"
                android:layout_width="@dimen/detail_img_size"
                android:layout_height="@dimen/detail_img_size" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/product_name_size"
            tools:text="@string/detail_price_text"
            android:id="@+id/detail_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/detail_qty_text_size"
            tools:text="@string/detail_qty_text"
            android:id="@+id/detail_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="@dimen/normal_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="numberDecimal"
                android:textSize="@dimen/qty_price_size"
                android:hint="@string/enter_product_quantity"
                android:id="@+id/detail_sell_et"
                android:layout_weight="2"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/detail_sell_btn"
                android:textSize="@dimen/qty_price_size"
                android:text="@string/sell"
                android:layout_weight="1"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/normal_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="numberDecimal"
                android:textSize="@dimen/qty_price_size"
                android:hint="@string/enter_product_quantity"
                android:id="@+id/detail_receive_et"
                android:layout_weight="2"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/detail_receive_btn"
                android:textSize="@dimen/qty_price_size"
                android:text="@string/receive"
                android:layout_weight="1"
                android:layout_width="@dimen/zero_width"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:textSize="@dimen/detail_qty_text_size"
            android:text="@string/order_more"
            android:id="@+id/order_more"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
