<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="@dimen/zero_width"
        android:layout_height="@dimen/image_view_ht"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        tools:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="@dimen/zero_width"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/product_name_size"
            tools:text="@string/product_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/product_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/qty_price_size"
                tools:text="@string/qty" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/qty_price_size"
                tools:text="@string/price" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_sell"
        android:layout_width="@dimen/zero_width"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:focusable="false"
        android:text="@string/sell"
        android:textSize="@dimen/qty_price_size" />

</LinearLayout>